--- a/index.html
+++ b/index.html
@@ -11,24 +11,37 @@
 </head>
 <body>
 	<!-- Formulario de selección de mes, año y semestre -->
-	<div ng-show="!vista" class="container">
-		<div class="jumbotron">
-			<h1 class="text-center">Calculador Campana de Gauss</h1>
-			<p class="text-center">Instrucciones.</p>
-			<p class="text-center"><span style="color: red"></span></p>
-			<div class="row">
-				
-				<input type="file" id="fileUpload" />
-				<input type="button" id="upload" value="Upload" />
-				
+	<div class="container-fluid">
+		<div class="row">
+			<div class="instrucciones col-xs-3">
+				<h3>Instrucciones
+				</h3>
+				<ol>
+					<li>Descargar de Moodle una hoja de cálculo (Excel) con los alumnos y sus notas.
+					</li>
+					<li>Borrar todas las columnas excepto alguna para identificar al alumno (por ejemplo, email) y la nota. Tiene que quedar con la <strong>identificación</strong> en la <strong>columna A</strong> y las <strong>notas</strong> en la <strong>B</strong>.
+					</li>
+					<li>Pulsar en 'Archivo' <i class="fa fa-angle-double-right"></i> 'Guardar como...' y en tipo de archivo cambiamos 'Libro de Excel' por <strong>'CSV (delimitado por comas)'</strong>. En todos los cuadros de diálogo que aparezcan pulsamos 'Sí' o 'Aceptar'.
+					</li>
+					<li>En esta página, pulsar en 'Examinar...' para seleccionar el CSV que acabamos de crear, hacer clic en 'Cargar Archivo' y guardar el archivo resultado.
+					</li>
+				</ol>
+				<p>Si el CSV resultado tiene <strong>todos los datos en una columna</strong> o necesitas que <strong>lea bien las tildes</strong>, es necesario importar.
+				</p>
+				<p>Para ello, en una hoja vacía de Excel, hay que ir a la pestaña 'Datos' (<i class="fa fa-angle-double-right"></i> Obtener datos externos) <i class="fa fa-angle-double-right"></i> 'Deste texto'. En la ventana que se abrirá, en origen del archivo hay que cambiar 'Windows (ANSI)' por <strong>'65001: Unicode (UTF-8)'</strong> que está casi al final. Esto arreglará las tildes.
+				</p>
+				<p>Para solucionar el otro problema, pulsamos en 'Siguiente' y habrá un apartado llamado <strong>'Separadores'</strong> donde marcando <strong>'Punto y coma'</strong> ya debería verse correctamente en la vista previa debajo, por lo que pulsamos en 'Finalizar'.
+				</p>
 			</div>
-			
-			<p class="text-center">
-				<a class="btn btn-primary btn-lg" href="#" role="button" ng-click="CalcularConvocatoria()">Calcular Notas</a>
-			</p>
-			
-			<div class="row">
-				<div id="dvCSV">
+	
+			<div class="jumbotron col-xs-6">
+				<h1 class="text-center">Calculador Campana de Gauss</h1>
+				<div class="row">
+					<div class="col-xs-12 col-md-2 col-md-offset-4">
+						<input id="fileUpload" type="file" />
+						<i class="fa fa-spinner fa-lg fa-spin  spinner hidden"></i>
+						<input id="upload" class="btn btn-primary btn-lg cargar" type="button" value="Cargar archivo" />
+					</div>
 				</div>
 			</div>
 		</div>
@@ -37,3 +50,4 @@
 	<script src="js/vendor/jquery-2.1.3.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
+</html>
